--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,14 +1,10 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "./",
-    "jsx": "react-jsx",
-    "lib": ["DOM", "ESNext"],
-    "types": ["vite/client", "node"]
+    "rootDir": "../",
+    "outDir": "../__build__/",
+    "composite": true
   },
-  "include": ["src/**/*"],
-  "paths": {
-    "@shared/*": ["../shared/*"]
-  },
+  "include": ["./**/*"],
   "references": [{ "path": "../shared" }]
 }
