--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,13 +1,9 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
-    "module": "ESNext",
-    "target": "ESNext",
-    "lib": ["ESNext"],
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "outDir": "../__build__/shared"
+    "rootDir": "../", // Ensure this includes both backend and shared
+    "outDir": "../__build__/",
+    "composite": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["../backend/**/*", "../frontend/**/*"]
 }
