--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "../", // Ensure this includes both backend and shared
-    "outDir": "../__build__/",
+    "rootDir": "./",
+    "outDir": "../__build__/shared",
     "composite": true
   },
-  "exclude": ["../backend/**/*", "../frontend/**/*"]
+  "include": ["./**/*.ts"]
 }
