[ fix/shared_composite ] first step fix - w/ rel. `shared` path - shared folder works but need to replace  import in code by its relative path for now

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,9 @@
     "outDir": "../__build__/backend",
     "composite": true
   },
+  "paths": {
+    "@shared/*": ["../shared/*"]
+  },
   "references": [{ "path": "../shared" }],
   "include": ["../shared/**/*.ts", "./**/*.ts"]
 }
